[project]
name = "streamlit-gradio-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "gradio>=5.31.0",
    "sentencepiece>=0.2.0",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]
# transformers dependencies:
# - accelerate
# - sentencepiece
